Arquivos utilizados ou alterados na aula

--- a/Loja Sem basi.html
+++ b/Loja Sem basi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sem basi</title>
     <style>
         .menuinicio {
            margin: 0;
@@ -44,26 +44,27 @@
                 border: none;
             }
         </style>
-<link rel="stylesheet" href="./CSS/CSS loja Sem basi.css">
+<link rel="stylesheet" href="./CSS loja Sem basi.css">
 </head>
 <body>
     <div class="myDiv">
         <p style="font-size: xx-large; color: #4A2C2A";>Sem basi já, seu pedido já já chega</p>
     </div>
     <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="#Inicio">Inicio</a>
+  <a href="#Sobre nós">Porque adotar um pet</a>
+  <a href="#contatos">Adoções</a> 
+  <a href="#Porque adotar um Pet">Contatos</a>
 </div>
 
 <div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
-  <p>Some content..</p>
+    <p style="text-align: center; font-size: x-large; font-family:Georgia, 'Times New Roman', Times, serif ; color: #4A2C2A";>No Sem basi já, você encontra Pequenos amigos que serão como um refugio. Explore um mundo de carinho e qualidade. Seja bem-vindo (a) ao lugar onde o amor pelos pets é a nossa maior inspiração e com sua ajuda, teremos um mundo mais feliz..</p>
+
 </div>
     <div class="Divimg">
-         <img src="./Image/Página Inicial SemBasi Pet Shop.jpg"  alt="imagem principal" width="500" height="450">
+         <img src="./Trabalho/Image/Capa pet shop.jpeg"  alt="imagem principal" width="500" height="450">
     </div>
-    <p style="text-align: center; font-size: x-large; font-family:Georgia, 'Times New Roman', Times, serif ; color: #4A2C2A";>No Sem basi já, você encontra produtos selecionados e serviços especializados pra fazer seu amigo mais feliz. Explore um mundo de carinho e qualidade. Seja bem-vindo (a) ao lugar onde o amor pelos pets é a nossa maior inspiração.</p>
+    <p style="color: #4A2C2A; font-size: x-large ; font-family: Georgia, 'Times New Roman', Times, serif";> Nós na Sem basi somos um instituto, que incentiva a adoção de pets, veja Pequenos amigos que esperam por você.</p>
+    <iframe src=""></iframe>
 </body>
 </html>
