Arquivos utilizados ou alterados na aula

--- a/Trabalho/login.html
+++ b/Trabalho/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tela de Login</title>
-    <link rel="stylesheet" href="./CSS/CssSemBasi.css">
+    <link rel="stylesheet" href="./CSS/CSS loja Sem basi.css">
 </head>
 <body>
     <h1 style="color: #4a2c2a;">Cadastro de usuário</h1>
